--- a/src/main/webapp/help-ncoverConfig.html
+++ b/src/main/webapp/help-ncoverConfig.html
@@ -10,7 +10,7 @@
 		</tr>
 		<tr>
 			<td style="padding-right: 10px;"><strong>Default path</strong></td>
-			<td>target/site/cobertura/coverage.xml</td>
+			<td>fullcoverage.html</td>
 		</tr>
 	</table>
 </div>
